# FanoSeq

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
datasets/: registry.yaml
datasets/coding_noncoding/: benchmark.yaml  dataset.yaml  prepare.py
datasets/mutation_effect/: benchmark.yaml  dataset.yaml  prepare.py  splits.tsv
datasets/splice_junction/: benchmark.yaml  dataset.yaml  prepare.py
datasets/taxonomy/: benchmark.yaml  dataset.yaml  prepare.py
docs/: axis_definitions.md  axis_schemes.md  benchmarking.md  biological_context.md  codon_geometry.md  encoding_audit.md  fano_plane.md  homology_splitting.md  implementation_roadmap.md  information_theory.md  methods_report.md  octonion_vs_interaction_features.md  references.md  reverse_complement_behavior.md  scientific_evidence_status.md  scientific_scope.md  versioning.md
examples/: benchmark.yaml  benchmark_metadata.tsv  benchmark_sequences.fasta  example_dna.fasta  example_protein.fasta
src/fanoseq/: __init__.py  algebra.py  axis_schemes.py  baselines.py  biological_context.py  cli.py  codon_features.py  distances.py  dna_features.py  encoding_audit.py  encodings.py  fano_attribution.py  fano_motifs.py  fano_plane.py  fasta.py  fingerprints.py  genetic_code.py  information_theory.py  io.py  matrix_genetics.py  octonion.py  octonion_numba.py  pipeline.py  plots.py  protein_features.py  tensor_export.py  windows.py  workflow.py
src/fanoseq/benchmark/: __init__.py  config.py  datasets.py  evaluation.py  feature_sets.py  homology.py  models.py  null_models.py  reporting.py  splits.py  statistics.py
tests/: test_algebra.py  test_axis_schemes.py  test_baselines.py  test_benchmark.py  test_benchmark_safety.py  test_biological_context.py  test_codon_features.py  test_dataset_registry.py  test_dna_features.py  test_downstream.py  test_encoding_audit.py  test_encodings.py  test_fano_attribution.py  test_fano_plane.py  test_homology.py  test_information_theory.py  test_matrix_genetics.py  test_octonion.py  test_pipeline.py  test_plots.py  test_protein_features.py  test_workflow.py
