[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fanoseq"
version = "0.1.0"
description = "Sequence trajectories in Fano-structured octonion space"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "FanoSeq contributors" }]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "scipy",
    "scikit-learn",
    "biopython",
    "pyfastx",
    "scikit-bio",
    "numba",
    "typer",
    "rich",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "build", "twine"]

[project.scripts]
fanoseq = "fanoseq.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_return_any = false
ignore_missing_imports = true
