[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fanoseq"
version = "0.2.0"
description = "Sequence trajectories in Fano-structured octonion space"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "FanoSeq contributors" }]
license = "LicenseRef-FanoSeq-Source-Available"
license-files = ["LICENSE"]
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "scipy",
    "scikit-learn",
    "biopython",
    "pyfastx",
    "scikit-bio",
    "numba",
    "typer",
    "rich",
    "pillow",
    "typing-extensions; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
    "twine",
    "pyyaml",
    "types-PyYAML",
]
downstream = [
    "duckdb",
    "polars",
    "zarr",
    "h5py",
    "networkx",
    "statsmodels",
    "matplotlib",
    "seaborn",
    "umap-learn",
    "pyyaml",
    "tqdm",
]
ml = ["torch"]

[project.scripts]
fanoseq = "fanoseq.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_return_any = false
ignore_missing_imports = true
